fix: panel gap in transfer

--- a/src/components/Wallet/Transfer/Transfer.module.scss
+++ b/src/components/Wallet/Transfer/Transfer.module.scss
@@ -7,7 +7,7 @@
 
 .wrapper {
     display: flex;
-    gap: 30px;
+    gap: 17px;
     overflow-y: hidden;
     height: 100%;
 }
